--- a/displayWidget/examples/introduction.ipynb
+++ b/displayWidget/examples/introduction.ipynb
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14e5de27a3aa483fa9b48cb14ec7e8e6",
+       "model_id": "120def140e4a43b98d882aa84a7a40f3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ExampleWidget()"
+       "ExampleWidget(value='bob')"
       ]
      },
      "metadata": {},
@@ -60,10 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w.value=\"bob\""
+   ]
   },
   {
    "cell_type": "code",
