back to nesting, added componentDidUpdate, debug changed view.touch() to view.model.save_changes()

--- a/displayWidget/examples/introduction.ipynb
+++ b/displayWidget/examples/introduction.ipynb
@@ -42,7 +42,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd933780861d4db69e80cc701bedebef",
+       "model_id": "5d1ee54313264c4cbaf074e6fc62ed99",
        "version_major": 2,
        "version_minor": 0
       },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -68,10 +68,10 @@
     {
      "data": {
       "text/plain": [
-       "'Hello World'"
+       "'Hello New'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.value=\"bob\""
+    "w.value=\"test\""
    ]
   },
   {
