--- a/displayWidget/examples/introduction.ipynb
+++ b/displayWidget/examples/introduction.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Introduction"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -35,19 +28,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Try changing the value in the text box"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d1ee54313264c4cbaf074e6fc62ed99",
+       "model_id": "0444cc5dc4734c46aef725abd86d745b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ExampleWidget()"
+       "ExampleWidget(value='a')"
       ]
      },
      "metadata": {},
@@ -59,8 +59,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### JS dynamically updates Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -68,16 +75,23 @@
     {
      "data": {
       "text/plain": [
-       "'Hello New'"
+       "'aadsfa'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "w.value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Python dynamically updates JS"
    ]
   },
   {
