--- a/displayWidget/examples/introduction.ipynb
+++ b/displayWidget/examples/introduction.ipynb
@@ -36,18 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0444cc5dc4734c46aef725abd86d745b",
+       "model_id": "c2184a43ddee42e9ac435ca0e6085696",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ExampleWidget(value='a')"
+       "ExampleWidget()"
       ]
      },
      "metadata": {},
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -75,10 +75,10 @@
     {
      "data": {
       "text/plain": [
-       "'aadsfa'"
+       "'this is a changed value'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "w.value=\"test\""
+    "w.value=\"variable value specified in python\""
    ]
   },
   {
